ISPN-12030 Fix java8-test
* Extract a separate property for BlockHound on JDK13+
* Use the aggregate testjvm.jdkSpecificArgs property
  everywhere
* Unset all JDK-specific properties in the java8-test
  profile